--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports:
     httr2,
-    dplyr
+    dplyr,
+    glue
 Suggests: 
     knitr,
     rmarkdown
