--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ export(get_survey_details)
 export(get_surveys)
 export(login_sims)
 export(prep_survey_details)
+import(bcmaps)
+import(dplyr)
+import(ggplot2)
 import(glue)
 import(httr2)
+import(sf)
 importFrom(dplyr,bind_rows)
