--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,13 @@ S3method(animals,numeric)
 S3method(measurements,animal)
 S3method(measurements,character)
 S3method(measurements,default)
+S3method(print,project)
+S3method(print,survey)
 S3method(project_details,character)
 S3method(project_details,default)
 S3method(project_details,numeric)
 S3method(projects,default)
 S3method(projects,logical)
-S3method(summary,project)
-S3method(summary,survey)
 S3method(survey_details,default)
 S3method(survey_details,numeric)
 S3method(surveys,default)
