--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: simsbc
-Title: Species Inventory Management System
+Title: Access data from the Species Inventory Management System
 Version: 0.0.0.9000
 Authors@R: c(
     person("Macgregor", "Aubertin-Young", , "macgregor.aubertin-young@gov.bc.ca", role = c("aut", "cre")),
     person("Province of British Columbia", role = "cph")
   )
-Description: Access to biodiversity data and projects through British Columbia's Species Inventory Management System.
-License: Apache License (== 2.0) | file LICENSE
+Description: Access biodiversity data and survey information managed in British Columbia's Species Inventory Management System (<https://sims.nrs.gov.bc.ca/>.
+License: Apache License (== 2.0)
+URL: https://bcgov.github.io/simsbc/, https://sims.nrs.gov.bc.ca
+BugReports: https://github.com/bcgov/simsbc/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -22,4 +24,3 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-URL: https://bcgov.github.io/simsbc/
