add req_retry to login

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(survey_details,default)
 S3method(survey_details,numeric)
 S3method(surveys,default)
 S3method(surveys,numeric)
+S3method(telemetry,default)
+S3method(telemetry,numeric)
 export(animal_details)
 export(animals)
 export(create_report_template)
@@ -20,6 +22,7 @@ export(project_details)
 export(projects)
 export(survey_details)
 export(surveys)
+export(telemetry)
 import(bcmaps)
 import(dplyr)
 import(ggplot2)
