format telemetry response for raw = F

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ S3method(telemetry,numeric)
 export(animal_details)
 export(animals)
 export(create_report_template)
-export(login_sims)
+export(login_simsbc)
 export(project_details)
 export(projects)
 export(survey_details)
