--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(animal_details,character)
 S3method(animal_details,default)
 S3method(animals,default)
 S3method(animals,numeric)
+S3method(deployments,default)
 S3method(project_details,default)
 S3method(project_details,numeric)
 S3method(projects,default)
@@ -12,14 +13,17 @@ S3method(survey_details,default)
 S3method(survey_details,numeric)
 S3method(surveys,default)
 S3method(surveys,numeric)
+S3method(telemetry,default)
 export(animal_details)
 export(animals)
 export(create_report_template)
+export(deployments)
 export(login_sims)
 export(project_details)
 export(projects)
 export(survey_details)
 export(surveys)
+export(telemetry)
 import(bcmaps)
 import(dplyr)
 import(ggplot2)
